--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     text-align: center;
 }
 h1{
-    margin: 2rem;
+    margin: 1rem;
 }
 .container{
     
@@ -32,7 +32,8 @@ h1{
     border-radius: 1rem;
     border:none;
     box-shadow: 0 0 1rem rgba(0,0,0,0.3);
-    font-size: 9vmin;
+    background-color: #ffffc7;
+    font-size: 8vmin;
     color:#b0413e;
 
 }
@@ -45,3 +46,29 @@ h1{
     background-color: #191913;
     color: white;
 }
+
+#newGameBtn
+{
+    padding: 1rem;
+    font-size: 1.25rem;
+    border:none;
+    border-radius: 0.5rem;
+    background-color: #191913;
+    color: white;
+}
+.msg-container{
+    height:100vmin;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap:2.5rem;
+}
+#msg{
+    color:#ffe2d1;
+    font-size: 5vmin;
+}
+.hide{
+    display: none;
+}
+
